native/compiler-native/check_output.txt
    Checking compiler-native v0.1.0 (/Users/judahsullivan/Personal/zenith/zenith-compiler/native/compiler-native)
warning: unused import: `is_component_tag`
  --> src/discovery.rs:13:20
   |
13 | use crate::parse::{is_component_tag, parse_script, parse_template};
   |                    ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashSet`
 --> src/finalize.rs:9:5
  |
9 | use std::collections::HashSet;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `LoopContext`
  --> src/finalize.rs:13:40
   |
13 | use crate::validate::{ExpressionInput, LoopContext, LoopContextInput, ZenIR};
   |                                        ^^^^^^^^^^^

warning: unused import: `oxc_syntax::scope::ScopeFlags`
  --> src/jsx_lowerer.rs:10:5
   |
10 | use oxc_syntax::scope::ScopeFlags;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
  --> src/parse.rs:12:13
   |
12 | use serde::{Deserialize, Serialize};
   |             ^^^^^^^^^^^  ^^^^^^^^^

error[E0308]: mismatched types
   --> src/codegen.rs:869:57
    |
869 |                     let obj_code = Codegen::new().build(&me.object).code;
    |                                                   ----- ^^^^^^^^^^ expected `&Program<'_>`, found `&Expression<'_>`
    |                                                   |
    |                                                   arguments to this method are incorrect
    |
    = note: expected reference `&oxc_ast::ast::Program<'_>`
               found reference `&oxc_ast::ast::Expression<'_>`
note: method defined here
   --> /Users/judahsullivan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/oxc_codegen-0.110.0/src/lib.rs:226:12
    |
226 |     pub fn build(mut self, program: &Program<'a>) -> CodegenReturn {
    |            ^^^^^

error[E0308]: mismatched types
   --> src/codegen.rs:877:57
    |
877 |                     let obj_code = Codegen::new().build(&me.object).code;
    |                                                   ----- ^^^^^^^^^^ expected `&Program<'_>`, found `&Expression<'_>`
    |                                                   |
    |                                                   arguments to this method are incorrect
    |
    = note: expected reference `&oxc_ast::ast::Program<'_>`
               found reference `&oxc_ast::ast::Expression<'_>`
note: method defined here
   --> /Users/judahsullivan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/oxc_codegen-0.110.0/src/lib.rs:226:12
    |
226 |     pub fn build(mut self, program: &Program<'a>) -> CodegenReturn {
    |            ^^^^^

error[E0308]: mismatched types
   --> src/codegen.rs:878:57
    |
878 |                     let key_code = Codegen::new().build(&me.expression).code;
    |                                                   ----- ^^^^^^^^^^^^^^ expected `&Program<'_>`, found `&Expression<'_>`
    |                                                   |
    |                                                   arguments to this method are incorrect
    |
    = note: expected reference `&oxc_ast::ast::Program<'_>`
               found reference `&oxc_ast::ast::Expression<'_>`
note: method defined here
   --> /Users/judahsullivan/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/oxc_codegen-0.110.0/src/lib.rs:226:12
    |
226 |     pub fn build(mut self, program: &Program<'a>) -> CodegenReturn {
    |            ^^^^^

warning: unused variable: `d`
   --> src/codegen.rs:459:9
    |
459 |     for d in &state_decls {}
    |         ^ help: if this is intentional, prefix it with an underscore: `_d`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/codegen.rs:766:25
    |
766 |                     let mut p_name = attr.name.clone();
    |                         ----^^^^^^
    |                         |
    |                         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `lc`
   --> src/component.rs:451:9
    |
451 |     let lc = loop_context.as_ref().unwrap();
    |         ^^ help: if this is intentional, prefix it with an underscore: `_lc`

warning: unused variable: `script`
   --> src/discovery.rs:483:30
    |
483 | fn extract_props_from_script(script: &str) -> Vec<String> {
    |                              ^^^^^^ help: if this is intentional, prefix it with an underscore: `_script`

warning: value assigned to `page_html` is never read
  --> src/layout.rs:48:25
   |
48 |     let mut page_html = String::new();
   |                         ^^^^^^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/parse.rs:618:10
    |
618 |     let (mut normalized, normalized_exprs) = normalize_all_expressions(&casing_preserved);
    |          ----^^^^^^^^^^
    |          |
    |          help: remove this `mut`

For more information about this error, try `rustc --explain E0308`.
warning: `compiler-native` (lib) generated 11 warnings
error: could not compile `compiler-native` (lib) due to 3 previous errors; 11 warnings emitted
